# tdcv

./: README.md  f_lm.m
homework1.1/: PoseEstimation.m  best_cam_locations700.mat  best_cam_locations750.mat  best_cam_orientations700.mat  best_cam_orientations750.mat  best_inliers_set700.mat  best_inliers_set750.mat  hw1_task1_skeleton.m  hw1_task1_skeleton.m~  hw1_task2_skeleton.m  hw1_task2_skeleton.m~  labeled_points.mat  sift_keypoints.mat  sift_matches.mat  sift_model.mat
homework1.2/: E.m  earl.m  good_orientatations2.mat  good_rotations.mat  good_rotations2.mat  good_rotations3.mat  good_rotations4.mat  good_translations.mat  good_translations2.mat  good_translations3.mat  good_translations4.mat  ground_truth.txt  hw1_task3_skeleton.m  jack.m  myJack.m  queeny.m  sift_matches.mat  sift_model.mat  skew_sym_mat.m  start_rotations.mat  start_translations.mat  symbolicJackie.m  test_ground_truth.txt  test_rotations.mat  test_rotations2.mat  test_sift_matches.mat  test_start_rotations.mat  test_start_translations.mat  test_trajectory.txt  test_translations.mat  test_translations2.mat  trajectory.txt  valid_ground_truth.txt  valid_trajectory.txt
homework2/: CMakeLists.txt  RandomForest.cpp  hog_descriptors.cpp  hog_visualization.cpp  main.cpp  task2.cpp
homework3/: HW03_01.ipynb  thirdProject.ipynb
homework3/Code/: data_prep.py  loss.py  loss2.py  network.py
homework3/code/: data_prep.py  desiCNN.py  lasses.py
homework3/models/: train1.model  train_10epochs.model  train_10epochs_lr1e-2.model  train_15epochs_changedbatches.model  train_1epoch.model  (+2 more)
(+13 files in other folders)
